# pewcraft_backend

./: Cargo.toml
data/: effects.json  skills.json
data/classes/mage/: class.json  effects.json  skills.json
data/classes/warrior/: class.json  effects.json  skills.json
data/maps/: plain_pillars.json  with_bridge.json
src/: error.rs  game_definition_loader.rs  main.rs
