[package]
name = "pewcraft_backend"
version = "0.1.0"
authors = ["Paul Lesur <gitconfig@lesurpaul.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.7"
rocket = "0.4.4"
pewcraft_common = { path = "../pewcraft_common" }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
